done with basic layout of contact

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
          
             <a href="index.html">About Me</a>
-            <a href="portofolio">Portfolio</a>
+            <a href="portofolio.html">Portfolio</a>
             <a href="contact.html">contact</a>
             </div>
         </header>
