add class on connect with me element

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                               <h2>Connect with Me</h2>
                                 <div class="connect">
          
-                                   <a href="https://www.linkedin.com/in/naldo-tumundo-39a020189/"><img src="assets/images/linkedin.png"></a>
-                                   <a href="https://github.com/naldojoseph"><img src="assets/images/mark-github-128.png"></a>
-                                   <a href="https://www.instagram.com/naldojozze/"><img src="assets/images/Instagram-128.png"></a>
+                                   <a href="https://www.linkedin.com/in/naldo-tumundo-39a020189/"><img src="assets/images/linkedin.png" class="social"></a>
+                                   <a href="https://github.com/naldojoseph"><img src="assets/images/mark-github-128.png" class="social"></a>
+                                   <a href="https://www.instagram.com/naldojozze/"><img src="assets/images/Instagram-128.png" class="social"></a>
                                 </div>
          
                 </section>
