fix email letter

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                             </li>
 
                             <li>
-                                <label for="email">email</label>
+                                <label for="email">Email</label>
                                 <input type="text" name="email" id="email" placeholder="example@gmail.com" required="required">
                             </li>
                             <li>
