--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1>About Me</h1>
                             
                             <img src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.0-9/67564068_10211745781918588_7223765560260034560_n.jpg?_nc_cat=109&_nc_oc=AQmQalxfMEZ_RtAt0D5ybHb-X2n1gFA8MJp_IZKqccfzIVVWZKbRxIxWSQeCbMm2gk4&_nc_ht=scontent-sea1-1.xx&oh=c89b2ba0da72b1e295610791c2b5a8b1&oe=5DEC01F9" alt="Naldo">
-                            <p>Hello World! My name is Naldo. I am 24 years-old and I enjoy good food, good music, and good movies. I also love to hike, going to the zoo, and watch sunset at the beach. I play both soccer and volleyball and I am an avid Liverpool supporter. My favorite food are Pad See Ew, French Fries, and Burritos. I enjoy listening to John Mayer, Bruno Mars, and Frank Ocean. And my top 3 favorite movies are Ratatoille, Whiplash, and Django Unchained. </p>
+                            <p>Hello World! My name is Naldo. I am 24 years-old and I enjoy good food, good music, and good movies. I also love to hike, going to the zoo, and watch sunset at the beach. I play both soccer and volleyball and I am an avid Liverpool supporter. My favorite food are Pad See Ew, French Fries, and Burritos. I enjoy listening to John Mayer, Bruno Mars, and Frank Ocean. And my top 3 favorite movies are Ratatouille, Whiplash, and Django Unchained. </p>
 
                             <p> I am currently attending a coding bootcamp because I aspire to be a web developer. I hope to graduate and obtain a massive understanding and create something of my own. So, welcome to my page. Hope you enjoy.</p>
                       
