--- a/portofolio.html
+++ b/portofolio.html
@@ -25,7 +25,8 @@
 
                             <div class="work">
                                    <img src="assets/images/download.jpeg" class="auth-img" alt="Hangman">
-                                   <h3>Hangman</h3>
+                                   <a href="https://naldojoseph.github.io/Gif-Static/">Fiction Giphy</a>
+
                             </div>
 
                             <div class="work">
@@ -41,7 +42,7 @@
 
                             <div class="work">
                                     <img src="assets/images/download (3).jpeg" class="auth-img" alt="Rutgers">
-                                    <h3>Rutgers Info Widgets</h3>
+                                    <h3>Hangman</h3>
                             </div>
 
                             <div class="work">
@@ -63,7 +64,6 @@
    
                              <a href="https://www.linkedin.com/in/naldo-tumundo-39a020189/"><img src="assets/images/linkedin.png" class="social"></a>
                              <a href="https://github.com/naldojoseph"><img src="assets/images/mark-github-128.png" class="social"></a>
-                             <a href="https://www.instagram.com/naldojozze/"><img src="assets/images/Instagram-128.png" class="social"></a>
                              <a href="https://stackoverflow.com/users/11680063/naldo-tumundo"><img src="assets/images/Stack_Overflow-128.png" class="social"></a>
                           </div>
    
